# bolt

bolt.gives-main/: .gitignore  1.0.2.md  AGENTS.md  Agents.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FRAMEWORKS.md  LICENSE  README.md  ROADMAP.md  UPSTREAM_BACKPORT_PLAN.md  bindings.sh  commentary.md  docker-compose.yaml  electron-builder.yml  electron-update.yml  install.sh  package.json  pnpm-lock.yaml  pre-start.cjs  tsconfig.json  uno.config.ts  v1.0.0.md  v1.0.1.md  v1.0.3.md  v1.0.4.md  vite.config.ts  work.md  worker-configuration.d.ts  wrangler.toml
bolt.gives-main/.emergent/: emergent.yml
bolt.gives-main/.github/: CODEOWNERS
bolt.gives-main/app/: entry.server.tsx  root.tsx
bolt.gives-main/build-utils/: manual-chunks.spec.ts  manual-chunks.ts
bolt.gives-main/docs/: cloudflare-managed-instances.md  cloudflare-managed-instances.sql  fresh-install-checklist.md  mkdocs.yml  sub-agent-framework.md  v1.0.2-development-commentary.md
bolt.gives-main/frameworks/: config.ts
bolt.gives-main/functions/: [[path]].ts
bolt.gives-main/public/: robots.txt  sitemap.xml
bolt.gives-main/scripts/: admin-db.mjs  admin-db.spec.ts  admin-mailer.mjs  admin-mailer.spec.ts  capture-readme-screenshots.mjs  capture-screenshots.sh  capture-system-in-action.mjs  client-bundle-budget.mjs  collaboration-server.mjs  collaboration-server.spec.ts  e2e-calendar-build.mjs  e2e-calendar-observe.mjs  release-gate.mjs  (+37 more)
bolt.gives-main/src-tauri/: Cargo.toml  tauri.conf.json
bolt.gives-main/src-tauri/capabilities/: desktop.json
bolt.gives-main/src-tauri/src/: commands.rs  main.rs
(+444 files in other folders)
